add match to action reason

--- a/subreddit_specific/netflix/new_ui_sticky.yaml
+++ b/subreddit_specific/netflix/new_ui_sticky.yaml
@@ -5,7 +5,7 @@
 type: submission
 title+body: ["new ui", "recent redesign", "new userface", "new design", "new interface", "apps interface", "user interface", "app update"]
 action: remove
-action_reason: "New UI {{kind}}"
+action_reason: "New UI {{kind}}. Match: [{{match}}]"
 comment: |
   Sorry /u/{{author}}, but [your {{kind}}]({{permalink}}) was removed from /r/{{subreddit}} for the following reason(s):
 
