--- a/subreddit_specific/netflix/remove_petition_submissions.yaml
+++ b/subreddit_specific/netflix/remove_petition_submissions.yaml
@@ -1,6 +1,6 @@
 ---
 # Remove petition submissions
-# src: foobar
+# src: https://raw.githubusercontent.com/KanchiMoe/Reddit-AutoModerator-rules/master/subreddit_specific/netflix/remove_petition_submissions.yaml
 # Last updated: 2025-08-05
 type: submission
 domain+body: [act.rootsaction.org, actblue.com, action.sumofus.org, activism.thenation.com, avaaz.org, change.org, chn.ge, chng.it, credomobilize.com, demandprogress.org, easypolls.net, go.berniesanders.com, gopetition.com, leftaction.com, moveon.org, petitions.whitehouse.gov, signon.org, startjoin.com, strawpoll.me, takepart.com, thepetitionsite.com, watchdog.net]
