--- a/anti-spam/filter_store_sales.yaml
+++ b/anti-spam/filter_store_sales.yaml
@@ -5,5 +5,5 @@
 type: any
 title+body (regex): ["etsy", "my store", "my website", "patreon", "paypal", "instagram", "insta", "donate", "venmo", "buymeacoffee", "(?i)ko ?-?fi", "(?i)link ?_?tr", "(?i)cash ?_?app", "(?i)wish ?_?list", "(?i)store ?_?front"]
 action: remove
-action_reason: "Remove likely sales/store. Author: [/u/{{author}}], match: [{{match}}]"
+action_reason: "Likely sales/store. Author: [/u/{{author}}], match: [{{match}}]"
 ---
