--- a/general/sexual_emojis_in_post.yaml
+++ b/general/sexual_emojis_in_post.yaml
@@ -1,7 +1,7 @@
 ---
 # Remove sexual type emojis in post
 # src: https://raw.githubusercontent.com/KanchiMoe/Reddit-AutoModerator-rules/master/general/sexual_emojis_in_post.yaml
-# Last updated: 2025-08-05
+# Last updated: 2025-08-07
 type: submission
 title+body (regex): [
     "\U0001F975", # hot face
@@ -9,5 +9,5 @@ title+body (regex): [
     "\U0001F48B", # kissing lips
 ]
 action: remove
-action_reason: "Emoji in post. Author: [/u/{{author}}], match: [{{match}}]"
+action_reason: "Sexual emoji in post. Author: [/u/{{author}}], match: [{{match}}]"
 ---
