--- a/general/sexual_acts.yaml
+++ b/general/sexual_acts.yaml
@@ -1,9 +1,9 @@
 ---
 # Remove terms mentioning sexual acts
 # src: https://raw.githubusercontent.com/KanchiMoe/Reddit-AutoModerator-rules/master/general/sexual_acts.yaml
-# Last updated: 2025-08-07
+# Last updated: 2025-08-08
 type: any
-title+body (regex): ["doggystyle", "doggiestyle", "doggy style", "shag", "anal", "tits", "bbc"]
+title+body (regex): ["doggystyle", "doggiestyle", "doggy style", "shag", "anal", "tits", "g[a@*]ng.?b[a@*]ng"]
 action: remove
 action_reason: "Sexual acts. Author: [/u/{{author}}], match: [{{match}}]"
 ---
