--- a/.github/workflows/src_line_linting.yaml
+++ b/.github/workflows/src_line_linting.yaml
@@ -1,6 +1,6 @@
 name: Source line linting
 
-on:
+on: # yamllint disable-line rule:truthy
   pull_request:
     paths:
       - 'anti-spam/**/*.yml'
