--- a/general/sexual_acts.yaml
+++ b/general/sexual_acts.yaml
@@ -3,7 +3,7 @@
 # src: https://raw.githubusercontent.com/KanchiMoe/Reddit-AutoModerator-rules/master/general/sexual_acts.yaml
 # Last updated: 2025-08-08
 type: any
-title+body (regex): ["doggystyle", "doggiestyle", "doggy style", "shag", "anal", "tits", "g[a@*]ng.?b[a@*]ng"]
+title+body (regex): ["doggystyle", "doggiestyle", "doggy style", "shag", "anal", "tits", "g[a@*]ng.?b[a@*]ng", "yiff?(ed|s|ing)?", "beastiality", "zoophil(e|iac?)s?", "necrophil(e|i?ac?)s?", "sodom(y|ized?s?|ites?)"]
 action: remove
 action_reason: "Sexual acts. Author: [/u/{{author}}], match: [{{match}}]"
 ---
