--- a/general/sexual_body_parts.yaml
+++ b/general/sexual_body_parts.yaml
@@ -14,6 +14,7 @@ title+body (regex): [
     "t[1!]tt[i1!]e?s*",              # "titty", "titties", "t1tt1es"
     "@[s$][s$]",                     # "@ss", "@$$", "@s$"
     "p[uü*][s$5]{2,}y+",             # "pussy", "pu55y", "pu$$y", "püssy", "pu*ssy"
+    "erect(ions?)?"
 ]
 action: remove
 action_reason: "Sexual body part. Author: [/u/{{author}}], match: [{{match}}]"
