add labels to existing allowed phone numbers

--- a/subreddit_specific/missingpersons/antidox_phone.yaml
+++ b/subreddit_specific/missingpersons/antidox_phone.yaml
@@ -57,9 +57,9 @@ police_phone_numbers: [
   "770-497-5000",
   "604-945-1550",
   "706-624-1424",
-  "416-808-4200",
+  "416-808-4200",  # Toronto Police Service
   "800-659-4264",
-  "780-423-4567",
+  "780-423-4567",  # Edmonton Police Service, non-emergency
   "865-354-3388",
   "732-873-5533",
   "902-679-5555",
