--- a/subreddit_specific/ukrainianconflict/insult_reporter_asshole.yaml
+++ b/subreddit_specific/ukrainianconflict/insult_reporter_asshole.yaml
@@ -1,6 +1,6 @@
 ---
 # 'asshole' insult detection - reporting possible insults containing "asshole" and other variations
-# src: https://raw.githubusercontent.com/KanchiMoe/Reddit-AutoModerator-rules/refs/heads/master/subreddit_specific/ukrainianconflict/insult_reporter_asshole.ymal
+# src: https://raw.githubusercontent.com/KanchiMoe/Reddit-AutoModerator-rules/refs/heads/master/subreddit_specific/ukrainianconflict/insult_reporter_asshole.yaml
 # Last updated: 2025-08-14
 type: comment
 title+body: [asshole, asshat]
