--- a/subreddit_specific/ukrainianconflict/insult_reporter_cunt.yaml
+++ b/subreddit_specific/ukrainianconflict/insult_reporter_cunt.yaml
@@ -1,6 +1,6 @@
 ---
 # 'cunt' insult detection - reporting possible insults containing "cunt" and other variations
-# src: https://raw.githubusercontent.com/KanchiMoe/Reddit-AutoModerator-rules/refs/heads/master/subreddit_specific/ukrainianconflict/insult_reporter_cunt.ymal
+# src: https://raw.githubusercontent.com/KanchiMoe/Reddit-AutoModerator-rules/refs/heads/master/subreddit_specific/ukrainianconflict/insult_reporter_cunt.yaml
 # Last updated: 2025-08-14
 type: comment
 title+body: ["cunt"]
