--- a/subreddit_specific/ukrainianconflict/unreliablesource_usersubmitted.yaml
+++ b/subreddit_specific/ukrainianconflict/unreliablesource_usersubmitted.yaml
@@ -1,20 +1,31 @@
 ---
 # Remove unreliable sources (websites, user submitted)
+# src: https://raw.githubusercontent.com/KanchiMoe/Reddit-AutoModerator-rules/master/subreddit_specific/ukrainianconflict/unreliablesource_usersubmitted.yaml
+# Last updated: 2025-08-14
 type: submission
 domain+url: [blogspot.com, wordpress.com, medium.com, tiktok.com, tumblr.com, craigslist.org, discordapp.com, discord.com, docs.google.com, substack.com, seymourhersh.substack.com, quora.com]
+~domain+url: [snyder.substack.com, martinkuz.substack.com]
 action: remove
 comment: |
-    Hi /u/{{author}}, thank you for your {{kind}} to r/{{subreddit}}.
+  Sorry /u/{{author}}, but [your {{kind}}]({{permalink}}) was removed from /r/{{subreddit}} for the following reason(s):
 
-    However, your {{kind}} has been removed because `{{match}}` has been identified as an unreliable source, because anyone can make an account and submit content to this website.
+  > ### User submitted content website
 
-    You can view this page for more information: /r/UkrainianConflict/wiki/am/unreliable_sources
+  > /r/{{subreddit}} hopes to foster informed and intelligent discussion of the facts.
 
-    *****
+  > The website your {{kind}} links to, {{domain}}, allows anyone to make an account; and allows users to upload or submit any type of content without the need to verify that what they are publishing is the truth.
 
-    ^(Categorisation: websites-user submitted)
-action_reason: "Unreliable source (websites-user submitted) - [{{match}}]"
+  > As a result, it has been identified as an unreliable source, and is not permitted on /r/{{subreddit}}
+
+  Was this incorrect?
+
+  * 「[**Message the subreddit moderators**](https://reddit.com/message/compose?to=/r/{{subreddit}}&subject=%5Bappeal%5D%20Unreliable%20source,%20user%20submitted&message=Insert%20additional%20information%20here.%0A%0A---%20Do%20not%20edit%20below%20this%20line%20---%0A%0ALink%3A%20{{permalink}}%0A%0ADomain%3A%20{{domain}})」
+
+  *****
+  
+  *^(Don't reply to this comment directly,)* [*^(send the community moderators a message instead.)*](https://www.reddit.com/message/compose/?to=/r/{{subreddit}})
+
+action_reason: "Unreliable source (websites-user submitted). [/u/{{author}}], match: [{{match}}]"
 comment_stickied: true
 comment_locked: true
-moderators_exempt: false
 ---
