--- a/subreddit_specific/dressforyourbodytype/insults_body_size.yaml
+++ b/subreddit_specific/dressforyourbodytype/insults_body_size.yaml
@@ -1,9 +1,9 @@
 ---
 # Remove body size insults
 # src: https://raw.githubusercontent.com/KanchiMoe/Reddit-AutoModerator-rules/master/subreddit_specific/dressforyourbodytype/insults_body_size.yaml
-# Last updated: 2025-08-07
+# Last updated: 2025-08-12
 type: comment
-title+body: ["anorexic", "bulimic", "anorexia", "bulimia", "eat something", "malnutrition", "malnutritioned", "go to the gym", "eat less", "work out more", "workout more", "fat", "fatty"]
+title+body: ["anorexic", "bulimic", "anorexia", "bulimia", "eat something", "malnutrition", "malnutritioned", "go to the gym", "eat less", "work out more", "workout more", "fat", "fatty", "eating disorders"]
 action: remove
 action_reason: "Body size insults. Author: [/u/{{author}}], match: [{{match}}]"
 ---
