--- a/subreddit_specific/ukrainianconflict/insult_reporter_orcs.yaml
+++ b/subreddit_specific/ukrainianconflict/insult_reporter_orcs.yaml
@@ -1,7 +1,7 @@
 ---
 # 'orc' insult detection - removing insults containing "orc" and other variations
-# src: https://raw.githubusercontent.com/KanchiMoe/Reddit-AutoModerator-rules/refs/heads/master/subreddit_specific/ukrainianconflict/insult_reporter_orcs.yml
-# Last updated: 2025-03-30
+# src: https://raw.githubusercontent.com/KanchiMoe/Reddit-AutoModerator-rules/refs/heads/master/subreddit_specific/ukrainianconflict/insult_reporter_orcs.yaml
+# Last updated: 2025-08-14
 body (regex): ["orc", "orcs", "ork", "orks", "orq", "orqs", "0rc", "0rcs", "0rk", "0rks", "orruk", "orruks", "ogre", "ogres", "ogors", "ogor", "оrc", "оrcs", "оrk", "orks"]
 ~body (includes): ["translation", "translate", "says", "language"]
 action: remove
