--- a/general/sexual_body_parts.yaml
+++ b/general/sexual_body_parts.yaml
@@ -1,7 +1,7 @@
 ---
 # Remove terms mentioning body parts
 # src: https://raw.githubusercontent.com/KanchiMoe/Reddit-AutoModerator-rules/master/general/sexual_body_parts.yaml
-# Last updated: 2025-08-07
+# Last updated: 2025-08-17
 type: any
 title+body (regex): [
     "d+[i!1*]+c*k+s*",               # "dick", "diicksss", "d!ck", "d1ck", "d*ick"
@@ -14,7 +14,8 @@ title+body (regex): [
     "t[1!]tt[i1!]e?s*",              # "titty", "titties", "t1tt1es"
     "@[s$][s$]",                     # "@ss", "@$$", "@s$"
     "p[uü*][s$5]{2,}y+",             # "pussy", "pu55y", "pu$$y", "püssy", "pu*ssy"
-    "erect(ions?)?"
+    "erect(ions?)?",
+    "(nice|cute|gorgeous|(love|luv) (your|ur)|hot|lovely|pretty|perfect|adorable) feet"
 ]
 action: remove
 action_reason: "Sexual body part. Author: [/u/{{author}}], match: [{{match}}]"
