--- a/subreddit_specific/dressforyourbodytype/insults_body_size.yaml
+++ b/subreddit_specific/dressforyourbodytype/insults_body_size.yaml
@@ -3,7 +3,7 @@
 # src: https://raw.githubusercontent.com/KanchiMoe/Reddit-AutoModerator-rules/master/subreddit_specific/dressforyourbodytype/insults_body_size.yaml
 # Last updated: 2025-08-12
 type: comment
-title+body: ["anorexic", "bulimic", "anorexia", "bulimia", "eat something", "malnutrition", "malnutritioned", "go to the gym", "eat less", "work out more", "workout more", "fat", "fatty", "eating disorders"]
+title+body: ["anorexic", "bulimic", "anorexia", "bulimia", "eat something", "malnutrition", "malnutritioned", "go to the gym", "eat less", "work out more", "workout more", "fat", "fatty", "eating disorders", "too skinny", "obese"]
 action: remove
 action_reason: "Body size insults. Author: [/u/{{author}}], match: [{{match}}]"
 ---
