--- a/subreddit_specific/nevertellmetheodds/common_sports.yaml
+++ b/subreddit_specific/nevertellmetheodds/common_sports.yaml
@@ -3,7 +3,7 @@
 # src: https://raw.githubusercontent.com/KanchiMoe/Reddit-AutoModerator-rules/master/subreddit_specific/nevertellmetheodds/common_sports.yaml
 # Last updated: 2025-08-23
 type: submission
-title: ["umpire", "little league", "golf", "handball"]
+title: ["umpire", "little league", "golf", "handball", "the open", "wickets"]
 action: remove
 comment: |
   Sorry /u/{{author}}, but [your {{kind}}]({{permalink}}) was removed from /r/{{subreddit}} for the following reason(s):
