minor comment adjustment

--- a/subreddit_specific/nevertellmetheodds/common_lined_up.yaml
+++ b/subreddit_specific/nevertellmetheodds/common_lined_up.yaml
@@ -14,6 +14,8 @@ comment: |
 
   > Posts lining up, or being next to each other are not odds-defying.
 
+  Thank you for contributing to the subreddit!
+
   *****
 
   *^(Don't reply to this comment directly,)* [*^(send the community moderators a message instead.)*](https://www.reddit.com/message/compose/?to=/r/{{subreddit}})
