--- a/subreddit_specific/nevertellmetheodds/common_sports.yaml
+++ b/subreddit_specific/nevertellmetheodds/common_sports.yaml
@@ -16,6 +16,8 @@ comment: |
 
   > Sports fall in this category.
 
+  Thank you for contributing to the subreddit!
+
   *****
 
   *^(Don't reply to this comment directly,)* [*^(send the community moderators a message instead.)*](https://www.reddit.com/message/compose/?to=/r/{{subreddit}})
