--- a/subreddit_specific/madeleinemccann/no_abduction.yaml
+++ b/subreddit_specific/madeleinemccann/no_abduction.yaml
@@ -1,16 +1,17 @@
 ---
 # Removes claims there was no abduction
 # src: https://raw.githubusercontent.com/KanchiMoe/Reddit-AutoModerator-rules/master/subreddit_specific/madeleinemccann/no_abduction.yaml
-# Last updated: 2025-08-28
+# Last updated: 2025-09-05
 type: any
 body+title (regex): [
   "(?i)(false|fake(?:d)?) abduction",
   "(?i)(phantom|no|fictional) abductor",
-  "(?i)she was not (?:abducted|kidnapped)",
-  "(?i)no evidence of (?:an? )?(abduction|kidnapping)",
-  "(?i)no evidence to support she was (kidnapped|abducted)",
-  "(?i)no evidence (?:to support|supporting) (?:a|an) (kidnap(?:ping)?|abduction)",
-  "staged an abduction",
+  "(?i)(no|zero) evidence of (?:an? )?(abduction|kidnapping)",
+  "(?i)she (?:was not|wasn['’]t) (?:abducted|kidnapped|taken)",
+  "(?i)(no|zero) evidence to support she (?:was|wasn['’]t) (?:kidnapped|abducted)",
+  "(?i)(no|zero) evidence (?:to support|supporting) (?:a|an) (kidnap(?:ping)?|abduction)",
+  "(?i)(no|zero) evidence (?:that )?\\w+ was (?:abducted|kidnapped|taken)?",
+  "(?i)staged an abduction"
 ]
 action: remove
 action_reason: "No abduction claims. Author: [/u/{{author}}], match: [{{match}}]"
