--- a/subreddit_specific/nevertellmetheodds/odds.yaml
+++ b/subreddit_specific/nevertellmetheodds/odds.yaml
@@ -1,9 +1,12 @@
 ---
 # Someone said the odds!
 # src: https://raw.githubusercontent.com/KanchiMoe/Reddit-AutoModerator-rules/master/subreddit_specific/nevertellmetheodds/odds.yaml
-# Last updated: 2025-08-23
+# Last updated: 2025-08-28
 type: comment
-body (regex): ["odds (are|would be)", "(one|1) in (a|an|one|1)? million"]
+body (regex): ["(?i)the? odds (are|would be|of)", "(?i)(one|1) in (a|an|one|1)? million"]
 action: remove
 action_reason: "Mentioned the odds. Author: [/u/{{author}}], match: [{{match}}]"
+message: |
+  https://www.youtube.com/watch?v=qKR0oMqFcVI
+message_subject: "Never tell me the odds!"
 ---
