expand no abduction

--- a/subreddit_specific/madeleinemccann/no_abduction.yaml
+++ b/subreddit_specific/madeleinemccann/no_abduction.yaml
@@ -1,7 +1,7 @@
 ---
 # Removes claims there was no abduction
 # src: https://raw.githubusercontent.com/KanchiMoe/Reddit-AutoModerator-rules/master/subreddit_specific/madeleinemccann/no_abduction.yaml
-# Last updated: 2025-09-05
+# Last updated: 2025-09-06
 type: any
 body+title (regex): [
   "(?i)(false|fake(?:d)?) abduction",
@@ -11,7 +11,8 @@ body+title (regex): [
   "(?i)(no|zero) evidence to support she (?:was|wasn['’]t) (?:kidnapped|abducted)",
   "(?i)(no|zero) evidence (?:to support|supporting) (?:a|an) (kidnap(?:ping)?|abduction)",
   "(?i)(no|zero) evidence (?:that )?\\w+ was (?:abducted|kidnapped|taken)?",
-  "(?i)staged an abduction"
+  "(?i)staged an abduction",
+  "(?i)she (?:actually )?died the night before"
 ]
 action: remove
 action_reason: "No abduction claims. Author: [/u/{{author}}], match: [{{match}}]"
