adjust hiatus submission message

--- a/subreddit_specific/frieren/hiatus_submission.yaml
+++ b/subreddit_specific/frieren/hiatus_submission.yaml
@@ -12,7 +12,13 @@ comment: |
 
   > We do not allow {{kind}}s about a hiatus (either starting or ending) before it has been officially announced.
 
+  > Assume that it isn't true unless it has been officially announced. If it has been announced, there will be a post about it on the subreddit.
+
   > Please wait for it to be officially announced before making any {{kind}}s on it.
+
+  _Thanks for your understanding._
+
+  *****
 
   Was this a mistake? Has it been officially announced or unrelated?
 
