--- a/subreddit_specific/nevertellmetheodds/common_sports.yaml
+++ b/subreddit_specific/nevertellmetheodds/common_sports.yaml
@@ -1,9 +1,9 @@
 ---
 # Removes common odds, sports related
 # src: https://raw.githubusercontent.com/KanchiMoe/Reddit-AutoModerator-rules/master/subreddit_specific/nevertellmetheodds/common_sports.yaml
-# Last updated: 2025-08-23
+# Last updated: 2025-10-08
 type: submission
-title+body: ["umpire", "little league", "golf", "handball", "the open", "wickets"]
+title+body: ["umpire", "little league", "golf", "handball", "the open", "wickets", "baseball"]
 action: remove
 comment: |
   Sorry /u/{{author}}, but [your {{kind}}]({{permalink}}) was removed from /r/{{subreddit}} for the following reason(s):
