expand common/lined up

--- a/subreddit_specific/nevertellmetheodds/common_lined_up.yaml
+++ b/subreddit_specific/nevertellmetheodds/common_lined_up.yaml
@@ -1,9 +1,9 @@
 ---
 # Removes "post lined up" posts
 # src: https://raw.githubusercontent.com/KanchiMoe/Reddit-AutoModerator-rules/master/subreddit_specific/nevertellmetheodds/common_lined_up.yaml
-# Last updated: 2025-08-23
+# Last updated: 2025-10-25
 type: submission
-title+body: ["feed", "lined up", "line up", "posts", "beside eachother", "beside each other", "next to each other", "in a row", "back-to-back", "back to back", "the same post", "scrolling reddit", "browsing reddit", "scrolling through reddit", "browsing on reddit", "browsing through reddit", "looking at reddit", "my feed"]
+title+body: ["feed", "lined up", "line up", "posts", "beside eachother", "beside each other", "next to each other", "in a row", "back-to-back", "back to back", "the same post", "scrolling reddit", "browsing reddit", "scrolling through reddit", "browsing on reddit", "browsing through reddit", "looking at reddit", "my feed", "front page"]
 action: remove
 comment: |
   Sorry /u/{{author}}, but [your {{kind}}]({{permalink}}) was removed from /r/{{subreddit}} for the following reason(s):
